# advanced_graphics

PROJEKT_01/: download.sh  main.py  project_01.py
cw01/: gd methods  gd01  gd01.c  gd02  ppm02  ppm02.c  ppm03  ppm03.c  ppm03_final  ppm03_final.c  wynik.ppm  wynik01.ppm  wynik02.ppm  wynik03.ppm  wynik2.ppm
cw02/: cairo02  cairo02.c  cairo03.py  cairo04.py  cairo11.py  cairo12.py  cairo13.py  figures.py  gd01  gd01.c  gd02  ppm01  ppm02  ppm02.c  ppm03  sierpinski.py  wynik.eps  wynik_p.eps
cw03/: zad01.m  zad02.m
cw04/: zad_01.m  zad_02.m  zad_03.m  zad_04.m
cw05/: zad_01.m  zad_02.m
cw06/: opencv03  opencv03.cpp  opencv04  opencv04.cpp
cw07/: Makefile  octave01.m  opencv01.cpp  zad_01.py
cw08-2811/: opencv02.py  osg01  osg01.cpp  osg02  osg03  osg03.cpp  wynik01.osgt  wynik02.osgt
cw09_1212/: osg01.cpp  osg02.cpp  osg03.cpp  osg04  osg04.cpp  osg05  osg05.cpp  wynik01.osgt  wynik02.osgt
projekt_3D/: CMakeLists.txt  ZGK_1.cpp
projekt_3D/ZGK_1/: CMakeLists.txt  Input.cpp  Input.hpp  Time.hpp  ZGK_1.cpp  ZGK_1.h  main.hpp
